# Brugada_conduction_model

./: Makefile.in  README  configure  configure.ac
BrS_model_cylindrical_morphology_base/: Makefile.am
BrS_model_cylindrical_morphology_base/check_test/: in
BrS_model_cylindrical_morphology_base/src/: eular.c  input_para.c  mem.c  system.c  var_consts.c
sh/: cv.awk  cv.sh
src/: data_out.c  exptable.c  linear_mat.c  ord.c  pardiso_mat.c  syspara.h
